--- a/style.css
+++ b/style.css
@@ -45,6 +45,13 @@ body {
     inset 0 -8px 8px rgba(0, 0, 0, 0.25), 0 0 0 2px rgba(0, 0, 0, 0.75),
     10px 20px 25px rgba(0, 0, 0, 0.4);
 }
+.items:active {
+  transform: scale(0.95);          /* slightly shrink on click */
+  box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 0.1),
+              inset 2px 2px 5px rgba(0, 0, 0, 0.6); /* inner shadow */
+}
+
+
 li {
   width: 100%;
   height: 100%;
@@ -53,6 +60,7 @@ li {
   align-items: center;
   list-style-type: none;
   font-size: 1.5em;
+  user-select: none;
   border-radius: 10px;
   background: linear-gradient(to right, #292929, #464646);
 }
@@ -67,6 +75,8 @@ li {
   border-radius: 10px;
   padding: 10px;
   font-size: 2em;
+  text-align: right;
+  direction: ltr;
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.75);
 }
 #clear {
